changes on changelog page

--- a/apps/yup-live-mobile/src/theme/variables.css
+++ b/apps/yup-live-mobile/src/theme/variables.css
@@ -74,7 +74,7 @@
 
 
 body.dark {
-  --ion-color-primary: #ffbb2a;
+  --ion-color-primary: #d3c9a4;
   --ion-color-primary-rgb: 106, 100, 255;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
