changes: at https://yup-live.pages.dev/change-log

--- a/apps/yup-live/src/assets/app.scss
+++ b/apps/yup-live/src/assets/app.scss
@@ -18,5 +18,8 @@
             100% {
                 opacity: 1;
             }
-            }
-    
+}
+
+.mention-handle:hover {
+    text-decoration: underline;
+}
