chore: changes at https://yup-live.pages.dev/change-log

--- a/apps/yup-live-mobile/src/theme/variables.css
+++ b/apps/yup-live-mobile/src/theme/variables.css
@@ -188,14 +188,11 @@ body.dark {
  */
 
 .md body.dark {
-  --ion-background-color: #121212;
-  --ion-background-color-rgb: 18,18,18;
-
+  --ion-background-color: #18181b;
+  --ion-background-color-rgb: 18, 18, 18;
   --ion-text-color: #ffffff;
-  --ion-text-color-rgb: 255,255,255;
-
+  --ion-text-color-rgb: 255, 255, 255;
   --ion-border-color: #222222;
-
   --ion-color-step-50: #1e1e1e;
   --ion-color-step-100: #2a2a2a;
   --ion-color-step-150: #363636;
@@ -215,12 +212,8 @@ body.dark {
   --ion-color-step-850: #dbdbdb;
   --ion-color-step-900: #e7e7e7;
   --ion-color-step-950: #f3f3f3;
-
-  --ion-item-background: #1e1e1e;
-
-  --ion-toolbar-background: #1f1f1f;
-
-  --ion-tab-bar-background: #1f1f1f;
-
+  --ion-item-background: #18181b;
+  --ion-toolbar-background: #18181b;
+  --ion-tab-bar-background: #18181b;
   --ion-card-background: #1e1e1e;
 }
